cmake_minimum_required(VERSION 3.29)
project(git01)

set(CMAKE_CXX_STANDARD 20)

add_executable(git01 main.cpp
        TestClass.cpp
        TestClass.h
        OtraClase.cpp
        OtraClase.h
        ClaseAlamilla.cpp
        ClaseAlamilla.h
        Gmail.cpp
        Gmail.h
        Quinto.cpp
        Quinto.h)
